--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "cors": "^2.8.5",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
+    "fs": "0.0.1-security",
     "husky": "^2.5.0",
+    "multer": "^1.4.2",
     "mysql": "^2.16.0",
     "pbkdf2": "^3.0.17"
   },
