--- a/k8s/uat/deployment.yaml
+++ b/k8s/uat/deployment.yaml
@@ -23,3 +23,10 @@ spec:
           image: silasonyango93/kopa-node-backend:latest
           ports:
             - containerPort: 8080
+          volumeMounts:
+            - mountPath: /app/uploads
+              name: uploads-storage
+      volumes:
+        - name: uploads-storage
+          persistentVolumeClaim:
+            claimName: kopa-pvc
